# nrf70-bm

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig.nrf70bm  README.md  README.rst  build-docs.sh  west.yml
.github/workflows/: docbuild.yml
nrf70_bm_lib/: CMakeLists.txt  Kconfig
nrf70_bm_lib/docs/: Doxyfile  requirements.txt
nrf70_bm_lib/docs/source/: conf.py  index.rst  nrf70_bm_api.rst  nrf70_bm_lib.rst  nrf70_bm_porting_guide.rst  nrf70_osal_doc.rst
nrf70_bm_lib/include/: nrf70_bm_core.h  nrf70_bm_init.h  nrf70_bm_lib.h  nrf70_tx_pwr_ceil_dk.h  nrf70_tx_pwr_ceil_ek.h
nrf70_bm_lib/source/: nrf70_bm_core.c  nrf70_bm_init.c  nrf70_bm_lib.c
nrf70_zephyr_shim/: CMakeLists.txt  Kconfig
nrf70_zephyr_shim/source/: ficr_prog.c  qspi_if.c  rpu_hw_if.c  shim.c  work.c
nrf70_zephyr_shim/source/bus/: spi_if.c
nrf70_zephyr_shim/source/os/: shim.c
radio_test_bm/: CMakeLists.txt  prj.conf
radio_test_bm/inc/: nrf_wifi_radio_test_shell.h
radio_test_bm/src/: nrf_wifi_radio_test_main.c  nrf_wifi_radio_test_shell.c
samples/radio_test_bm/: CMakeLists.txt  Kconfig  prj.conf
samples/radio_test_bm/inc/: nrf_wifi_radio_test_shell.h
samples/radio_test_bm/src/: nrf_wifi_radio_ficr_shell.c  nrf_wifi_radio_test_main.c  nrf_wifi_radio_test_shell.c
samples/scan_bm/: CMakeLists.txt  Kconfig
samples/scan_bm/src/: main.c  utils.h
scan_bm/: CMakeLists.txt  Kconfig  prj.conf
scan_bm/src/: main.c  utils.c
zephyr/: module.yml
